[project]
name = "inked"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fasttext-wheel>=0.9.2",
    "lxml>=6.0.2",
    "playwright>=1.58.0",
    "readability-lxml>=0.8.4.1",
    "requests>=2.32.5",
    "textstat>=0.7.12",
]
