[project]
name = "inked"
version = "0.1.0"
description = "Provoke - A specialized web crawler and search engine for high-quality personal blog content"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fasttext-wheel>=0.9.2",
    "flask>=3.0.0",
    "lxml>=6.0.2",
    "playwright>=1.58.0",
    "readability-lxml>=0.8.4.1",
    "requests>=2.32.5",
    "textstat>=0.7.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.setuptools]
py-modules = [
    "app",
    "config",
    "crawler",
    "indexer",
    "ml_classifier",
    "ml_data_prep",
    "ml_train",
    "train_classifier",
    "quality_logger",
    "cleanup",
    "check_model_stats",
    "landing_page_filter",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["provoke*", "tests*"]
