[project]
name = "inked"
version = "0.1.0"
description = "Provoke - A specialized web crawler and search engine for high-quality personal blog content"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fasttext-wheel>=0.9.2",
    "flask>=3.0.0",
    "lxml>=6.0.2",
    "playwright>=1.58.0",
    "readability-lxml>=0.8.4.1",
    "requests>=2.32.5",
    "textstat>=0.7.12",
    "aiohttp>=3.9.0",
    "redis>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
provoke-web = "provoke.web.app:main"
provoke-crawler = "provoke.crawler:main"
provoke-trainer = "provoke.ml.trainer:main"

[tool.setuptools]
packages = ["provoke", "provoke.ml", "provoke.utils", "provoke.web"]
